--- a/web/html/audio.html
+++ b/web/html/audio.html
@@ -358,7 +358,7 @@
                             </li>
 
                             <li class="">
-                                <a href="image.html">
+                                <a href="image_tag.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Image Categorization
                                 </a>
