--- a/web/html/image_tag.html
+++ b/web/html/image_tag.html
@@ -343,7 +343,7 @@
                         <b class="arrow"></b>
 
                         <ul class="submenu">
-                            <li class="active">
+                            <li class="">
                                 <a href="ocr.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     OCR
@@ -361,8 +361,8 @@
                                 <b class="arrow"></b>
                             </li>
 
-                            <li class="">
-                                <a href="image_tag.html">
+                            <li class="active">
+                                <a href="image.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Image Categorization
                                 </a>
@@ -430,7 +430,7 @@
 					<div class="page-content-area">
 						<div class="page-header">
 							<h1>
-								OCR
+								Image Categorization
 								<small>
 									<i class="ace-icon fa fa-angle-double-right"></i>
 
@@ -438,17 +438,66 @@
 							</h1>
 						</div><!-- /.page-header -->
 
-						<div class="row">
-							<div class="col-xs-12">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <!-- PAGE CONTENT BEGINS -->
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <form action="../dummy.html" class="dropzone" id="dropzone">
+                                            <div class="fallback">
+                                                <input name="file" type="file" multiple="" />
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
                                 <div>
-                                    <form action="../dummy.html" class="dropzone" id="dropzone">
-                                        <div class="fallback">
-                                            <input name="file" type="file" multiple="" />
+                                    <div class="col-xs-6">
+                                        <img src="http://gnn-f02-01:14000/webhdfs/v1/data/sample/cat.jpg?user.name=hadoop&op=open">
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <div class="col-sm-7 infobox-container">
+                                            <div class="infobox infobox-red">
+                                                <div class="infobox-icon">
+                                                    <i class="ace-icon fa fa-comments"></i>
+                                                </div>
+
+                                                <div class="infobox-data">
+                                                    <span class="infobox-data-number">32</span>
+                                                    <div class="infobox-content">comments + 2 reviews</div>
+                                                </div>
+                                                <div class="stat stat-important">8%</div>
+                                            </div>
                                         </div>
-                                    </form>
+                                        <div class="col-sm-7 infobox-container">
+                                            <div class="infobox infobox-green">
+                                                <div class="infobox-icon">
+                                                    <i class="ace-icon fa fa-comments"></i>
+                                                </div>
+
+                                                <div class="infobox-data">
+                                                    <span class="infobox-data-number">32</span>
+                                                    <div class="infobox-content">comments + 2 reviews</div>
+                                                </div>
+                                                <div class="stat stat-success">8%</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-7 infobox-container">
+                                            <div class="infobox infobox-blue">
+                                                <div class="infobox-icon">
+                                                    <i class="ace-icon fa fa-comments"></i>
+                                                </div>
+
+                                                <div class="infobox-data">
+                                                    <span class="infobox-data-number">32</span>
+                                                    <div class="infobox-content">comments + 2 reviews</div>
+                                                </div>
+                                                <div class="stat stat-success">8%</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div><!-- PAGE CONTENT ENDS -->
-							</div><!-- /.col -->
-						</div><!-- /.row -->
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
 					</div><!-- /.page-content-area -->
 				</div><!-- /.page-content -->
 			</div><!-- /.main-content -->
