--- a/web/html/index.html
+++ b/web/html/index.html
@@ -358,7 +358,7 @@
                             </li>
 
                             <li class="">
-                                <a href="image.html">
+                                <a href="image_tag.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Image Categorization
                                 </a>
@@ -455,7 +455,8 @@
                                             <pre>
 Available commands:
 
-    classify     [Caffe]	fab classify:mnist,mnist,n01440764_3713.JPEG
+    classify     [Caffe]	fab classify:bvlc_reference_caffenet,/data/sample/ad_sunglass.png,3
+    count        [HDFS]		fab count:/data/text/newsgroup
     count_line   [Spark]	fab count_line:/data/image/imagenet/*.txt
     du           [HDFS]		fab du:/data/sample
     head         [Spark]	fab head:/data/image/imagenet/*.txt,5
