--- a/web/html/image.html
+++ b/web/html/image.html
@@ -440,7 +440,10 @@
                     <div>
                     <ul class="ace-thumbnails clearfix">
                     <li>
-                        <img width="150" height="150" alt="150x150" src="http://gnn-f02-01:14000/webhdfs/v1/data/image/imagenet/tar/n01440764_6388.JPEG?user.name=hadoop&op=open" />
+                        <img width="150" height="150" alt="150x150" src="http://gnn-f02-01:14000/webhdfs/v1/data/sample/cat.jpg?user.name=hadoop&op=open" />
+                    </li>
+                    <li>
+                        <img width="150" height="150" alt="150x150" src="http://gnn-f02-01:14000/webhdfs/v1/data/sample/ad_sunglass.png?user.name=hadoop&op=open" />
                     </li>
                     </ul>
                     </div><!-- PAGE CONTENT ENDS -->
