add data description tables

--- a/web/html/graph.html
+++ b/web/html/graph.html
@@ -452,9 +452,15 @@
                                             <tbody>
                                             <tr>
                                                 <td>Freebase</td>
-                                                <td>/data/graph/freebase/freebase-rdf-latest</td>
+                                                <td>/data/graph/freebase</td>
                                                 <td>3,000,673,968</td>
                                                 <td>380GB</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Movielens</td>
+                                                <td>/data/graph/movielens</td>
+                                                <td>21,588,247</td>
+                                                <td>0.6GB</td>
                                             </tr>
                                             </tbody>
                                         </table>
