--- a/web/html/index.html
+++ b/web/html/index.html
@@ -448,10 +448,13 @@
                                         <li> WISWYG UI <br>
                                             <a href="http://gnn-f05-04:1880">http://gnn-f05-04:1880</a>
                                         </li>
-                                        <li> REST API <br>
-                                            <a href="http://gnn-f05-04:8080/api/v1">http://gnn-f05-04:8080/api/v1</a> (hadoop/tip)
+                                        <li> DATA REST API <br>
+                                            <a href="http://gnn-f02-01:14000/webhdfs/v1?user.name=hadoop&op=liststatus">http://gnn-f02-01:14000/webhdfs/v1?user.name=hadoop&op=liststatus</a>
                                         </li>
-                                        <li> CLI
+                                        <li> FUNCTION REST API <br>
+                                            <a href="http://gnn-f05-04:8080/api/v1">http://gnn-f05-04:8080/api/v1</a>
+                                        </li>
+                                        <li> FUNCTION CLI
                                             <pre>
 Available commands:
 
