--- a/web/html/text.html
+++ b/web/html/text.html
@@ -465,7 +465,13 @@
                                             </tr>
                                             <tr>
                                                 <td>News</td>
-                                                <td>/data/text/news/hani/</td>
+                                                <td>/data/text/news/hani</td>
+                                                <td>19,997</td>
+                                                <td>0.04GB</td>
+                                            </tr>
+                                            <tr>
+                                                <td>News</td>
+                                                <td>/data/text/newsgroup</td>
                                                 <td>235,029</td>
                                                 <td>0.62GB</td>
                                             </tr>
