--- a/web/html/video.html
+++ b/web/html/video.html
@@ -435,43 +435,63 @@
                     </div><!-- /.page-header -->
 
                     <div class="row">
-                    <div class="col-xs-12">
-                    <!-- PAGE CONTENT BEGINS -->
-                    <div>
-                    <ul class="ace-thumbnails clearfix">
-                    <li>
-                        <video width="256" height="144" controls>
-                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/aaron_huey.mp4?user.name=hadoop&op=open">
-                        </video>
-                    </li>
-                    <li>
-                        <video width="256" height="144" controls>
-                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/julia_bacha.mp4?user.name=hadoop&op=open">
-                        </video>
-                    </li>
-                    <li>
-                        <video width="256" height="144" controls>
-                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/alex_steffen.mp4?user.name=hadoop&op=open">
-                        </video>
-                    </li>
-                    <li>
-                        <video width="256" height="144" controls>
-                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/keith_barry_does_brain_magic.mp4?user.name=hadoop&op=open">
-                        </video>
-                    </li>
-                    <li>
-                        <video width="256" height="144" controls>
-                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/ben_cameron_tedxyyc.mp4?user.name=hadoop&op=open">
-                        </video>
-                    </li>
-                    <li>
-                        <video width="256" height="144" controls>
-                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/rory_sutherland_perspective_is_everything.mp4?user.name=hadoop&op=open">
-                        </video>
-                    </li>
-                    </ul>
-                    </div><!-- PAGE CONTENT ENDS -->
-                    </div><!-- /.col -->
+                        <div class="col-xs-12">
+                            <table id="sample-table-1" class="table table-striped table-bordered table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Type</th>
+                                    <th>Location</th>
+                                    <th>Record</th>
+                                    <th>Size</th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+                                <tr>
+                                    <td>TED</td>
+                                    <td>/data/video/ted</td>
+                                    <td>1,828</td>
+                                    <td>57.3GB</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div><!-- /.span -->
+                        <div class="col-xs-12">
+                            <div>
+                                <ul class="ace-thumbnails clearfix">
+                                    <li>
+                                        <video width="256" height="144" controls>
+                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/aaron_huey.mp4?user.name=hadoop&op=open">
+                                        </video>
+                                    </li>
+                                    <li>
+                                        <video width="256" height="144" controls>
+                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/julia_bacha.mp4?user.name=hadoop&op=open">
+                                        </video>
+                                    </li>
+                                    <li>
+                                        <video width="256" height="144" controls>
+                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/alex_steffen.mp4?user.name=hadoop&op=open">
+                                        </video>
+                                    </li>
+                                    <li>
+                                        <video width="256" height="144" controls>
+                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/keith_barry_does_brain_magic.mp4?user.name=hadoop&op=open">
+                                        </video>
+                                    </li>
+                                    <li>
+                                        <video width="256" height="144" controls>
+                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/ben_cameron_tedxyyc.mp4?user.name=hadoop&op=open">
+                                        </video>
+                                    </li>
+                                    <li>
+                                        <video width="256" height="144" controls>
+                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/rory_sutherland_perspective_is_everything.mp4?user.name=hadoop&op=open">
+                                        </video>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div><!-- /.col -->
                     </div><!-- /.row -->
                     </div><!-- /.page-content-area -->
 				</div><!-- /.page-content -->
