--- a/web/html/index.html
+++ b/web/html/index.html
@@ -449,7 +449,7 @@
                                             <a href="http://gnn-f05-04:1880">http://gnn-f05-04:1880</a>
                                         </li>
                                         <li> DATA REST API <br>
-                                            <a href="http://gnn-f02-01:14000/webhdfs/v1?user.name=hadoop&op=liststatus">http://gnn-f02-01:14000/webhdfs/v1?user.name=hadoop&op=liststatus</a>
+                                            <a href="http://gnn-f02-01:14000/webhdfs/v1/data?user.name=hadoop&op=liststatus">http://gnn-f02-01:14000/webhdfs/v1?user.name=hadoop&op=liststatus</a>
                                         </li>
                                         <li> FUNCTION REST API <br>
                                             <a href="http://gnn-f05-04:8080/api/v1">http://gnn-f05-04:8080/api/v1</a>
