--- a/web/html/image.html
+++ b/web/html/image.html
@@ -340,6 +340,24 @@
 
                         <ul class="submenu">
                             <li class="">
+                                <a href="word_cloud.html">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    Word Cloud
+                                </a>
+
+                                <b class="arrow"></b>
+                            </li>
+
+                            <li class="">
+                                <a href="image_tag.html">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    Image Tagging
+                                </a>
+
+                                <b class="arrow"></b>
+                            </li>
+
+                            <li class="">
                                 <a href="ocr.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     OCR
@@ -352,15 +370,6 @@
                                 <a href="face.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Face Detection
-                                </a>
-
-                                <b class="arrow"></b>
-                            </li>
-
-                            <li class="">
-                                <a href="image_tag.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    Image Categorization
                                 </a>
 
                                 <b class="arrow"></b>
