--- a/web/html/index.html
+++ b/web/html/index.html
@@ -342,7 +342,7 @@
                             <li class="">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
-                                    Word Cloud
+                                    Word Cloud Tagging
                                 </a>
 
                                 <b class="arrow"></b>
@@ -467,19 +467,21 @@
                                             <pre>
 Available commands:
 
-    classify     [Caffe]	fab classify:bvlc_reference_caffenet,/data/sample/ad_sunglass.png,3
-    count        [HDFS]		fab count:/data/text/newsgroup
-    count_line   [Spark]	fab count_line:/data/image/imagenet/*.txt
-    du           [HDFS]		fab du:/data/sample
-    head         [Spark]	fab head:/data/image/imagenet/*.txt,5
-    ls           [HDFS]		fab ls:/data/sample
-    ngram_ko     [Spark]	fab ngram:2,/user/hadoop/tf_result,/user/hadoop/ngram_result
-    sql          [Hive]		fab sql:'select count(*) from data.news'
-    sql2         [Spark]	fab sql2:'select count(*) from data.news'
-    text         [HDFS]		fab text:/data/sample/hani_news.head.txt.gz,5
-    tf_ko        [Spark]	fab tf_ko:/data/text/news/hani/*,/user/hadoop/tf_result
-    train_mnist  [Caffe]	fab train_mnist:gpu=0,mode=GPU,net=net.prototxt
-    word_cloud   [R]		fab word_cloud:/user/hadoop/news_word_count.txt
+    train_mnist      [Caffe]	fab train_mnist:gpu=0,mode=GPU,net=net.prototxt
+    predict          [Caffe]	fab predict:bvlc_reference_caffenet,/data/sample/ad_sunglass.png,3
+    word_cloud       [R]		fab word_cloud:/user/hadoop/tf_result/part-00000,100,/user/hadoop/wordcloud.png
+    count_line       [Spark]	fab count_line:/data/image/imagenet/*.txt
+    count_line_with  [Spark]	fab count_line_with:/data/text/wikipedia/ko*,'<page>'
+    grep             [Spark]	fab grep:/data/text/wikipedia/ko*,/user/hadoop/grep_result,'<page>'
+    head             [Spark]	fab head:/data/image/imagenet/*.txt,5
+    ngram_ko         [Spark]	fab ngram:2,/user/hadoop/tf_result,/user/hadoop/ngram_result
+    sql2             [Spark]	fab sql2:'select count(*) from data.news'
+    tf_ko            [Spark]	fab tf_ko:/data/text/news/hani/*,/user/hadoop/tf_result
+    sql              [Hive]		fab sql:'select count(*) from data.news'
+    count            [HDFS]		fab count:/data/text/newsgroup
+    du               [HDFS]		fab du:/data/sample
+    ls               [HDFS]		fab ls:/data/sample
+    text             [HDFS]		fab text:/data/sample/hani_news.head.txt.gz,5
                                             </pre>
                                         </li>
                                     </ol>
