add audio file list ui

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -342,7 +342,7 @@
                             <li class="">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
-                                    Word Cloud Tagging
+                                    Word Cloud
                                 </a>
 
                                 <b class="arrow"></b>
