--- a/web/html/audio.html
+++ b/web/html/audio.html
@@ -438,237 +438,59 @@
                             Audio
                             <small>
                                 <i class="ace-icon fa fa-angle-double-right"></i>
-                                responsive photo gallery using colorbox
                             </small>
                         </h1>
                     </div><!-- /.page-header -->
 
                     <div class="row">
-                    <div class="col-xs-12">
-                    <!-- PAGE CONTENT BEGINS -->
-                    <div>
-                    <ul class="ace-thumbnails clearfix">
-                    <!-- #section:pages/gallery -->
-                    <li>
-                        <a href="../assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-1.jpg" />
-                        </a>
+                        <!-- PAGE CONTENT BEGINS -->
+                        <div class="col-xs-12">
+                            <table id="sample-table-1" class="table table-striped table-bordered table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Type</th>
+                                    <th>Location</th>
+                                    <th>Record</th>
+                                    <th>Size</th>
+                                </tr>
+                                </thead>
 
-                        <div class="tags">
-												<span class="label-holder">
-													<span class="label label-info">breakfast</span>
-												</span>
+                                <tbody>
+                                    <tr>
+                                        <td>Wall Street Journal Dataset</td>
+                                        <td>/data/audio/speech/wsj</td>
+                                        <td>3,127</td>
+                                        <td>29.1GB</td>
+                                    </tr>
+                                    <tr>
+                                        <td>English as a Second Language Podcast</td>
+                                        <td>/data/audio/speech/podcast/esl</td>
+                                        <td>943</td>
+                                        <td>1.0GB</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div><!-- /.span -->
 
-												<span class="label-holder">
-													<span class="label label-danger">fruits</span>
-												</span>
+                        <!-- #section:plugins/fuelux.treeview -->
+                        <div class="col-xs-12">
+                            <div class="widget-box widget-color-green2">
+                                <div class="widget-header">
+                                    <h4 class="widget-title lighter smaller">Browse Files</h4>
+                                </div>
 
-												<span class="label-holder">
-													<span class="label label-success">toast</span>
-												</span>
-
-												<span class="label-holder">
-													<span class="label label-warning arrowed-in">diet</span>
-												</span>
-                        </div>
-
-                        <div class="tools">
-                            <a href="#">
-                                <i class="ace-icon fa fa-link"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-paperclip"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-pencil"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-times red"></i>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li>
-                        <a href="../assets/images/gallery/image-2.jpg" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-2.jpg" />
-                            <div class="text">
-                                <div class="inner">Sample Caption on Hover</div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <!-- /section:pages/gallery -->
-
-                    <!-- #section:pages/gallery.caption -->
-                    <li>
-                        <a href="../assets/images/gallery/image-3.jpg" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-3.jpg" />
-                            <div class="text">
-                                <div class="inner">Sample Caption on Hover</div>
-                            </div>
-                        </a>
-
-                        <div class="tools tools-bottom">
-                            <a href="#">
-                                <i class="ace-icon fa fa-link"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-paperclip"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-pencil"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-times red"></i>
-                            </a>
-                        </div>
-                    </li>
-
-                    <!-- /section:pages/gallery.caption -->
-                    <li>
-                        <a href="../assets/images/gallery/image-4.jpg" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-4.jpg" />
-                            <div class="tags">
-                                <!-- #section:pages/gallery.tags -->
-													<span class="label-holder">
-														<span class="label label-info arrowed">fountain</span>
-													</span>
-
-													<span class="label-holder">
-														<span class="label label-danger">recreation</span>
-													</span>
-
-                                <!-- /section:pages/gallery.tags -->
-                            </div>
-                        </a>
-
-                        <div class="tools tools-top">
-                            <a href="#">
-                                <i class="ace-icon fa fa-link"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-paperclip"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-pencil"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-times red"></i>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li>
-                        <div>
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-5.jpg" />
-                            <div class="text">
-                                <div class="inner">
-                                    <span>Some Title!</span>
-
-                                    <br />
-                                    <a href="../assets/images/gallery/image-5.jpg" data-rel="colorbox">
-                                        <i class="ace-icon fa fa-search-plus"></i>
-                                    </a>
-
-                                    <a href="#">
-                                        <i class="ace-icon fa fa-user"></i>
-                                    </a>
-
-                                    <a href="#">
-                                        <i class="ace-icon fa fa-share"></i>
-                                    </a>
+                                <div class="widget-body">
+                                    <div class="widget-main padding-8">
+                                        <div id="tree2" class="tree"></div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
+                        </div><!-- /.col -->
+                        </div><!-- /.row -->
+                        <script type="text/javascript">
+                            var $assets = "../assets";//this will be used in fuelux.tree-sampledata.js
+                        </script>
 
-                    <li>
-                        <a href="../assets/images/gallery/image-6.jpg" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-6.jpg" />
-                        </a>
-
-                        <div class="tools tools-right">
-                            <a href="#">
-                                <i class="ace-icon fa fa-link"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-paperclip"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-pencil"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-times red"></i>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li>
-                        <a href="../assets/images/gallery/image-1.jpg" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-1.jpg" />
-                        </a>
-
-                        <div class="tools">
-                            <a href="#">
-                                <i class="ace-icon fa fa-link"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-paperclip"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-pencil"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-times red"></i>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li>
-                        <a href="../assets/images/gallery/image-2.jpg" data-rel="colorbox">
-                            <img width="150" height="150" alt="150x150" src="../assets/images/gallery/thumb-2.jpg" />
-                        </a>
-
-                        <!-- #section:pages/gallery.tools -->
-                        <div class="tools tools-top in">
-                            <a href="#">
-                                <i class="ace-icon fa fa-link"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-paperclip"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-pencil"></i>
-                            </a>
-
-                            <a href="#">
-                                <i class="ace-icon fa fa-times red"></i>
-                            </a>
-                        </div>
-
-                        <!-- /section:pages/gallery.tools -->
-                    </li>
-                    </ul>
-                    </div><!-- PAGE CONTENT ENDS -->
-                    </div><!-- /.col -->
-                    </div><!-- /.row -->
                     </div><!-- /.page-content-area -->
 				</div><!-- /.page-content -->
 			</div><!-- /.main-content -->
@@ -700,6 +522,7 @@
 		<!-- page specific plugin scripts -->
 		<script src="../assets/js/jquery.dataTables.min.js"></script>
 		<script src="../assets/js/jquery.dataTables.bootstrap.js"></script>
+        <script src="../assets/js/fuelux/fuelux.tree.min.js"></script>
 
 		<!-- ace scripts -->
 		<script src="../assets/js/ace-elements.min.js"></script>
@@ -707,71 +530,73 @@
 
 		<!-- inline scripts related to this page -->
 		<script type="text/javascript">
-			jQuery(function($) {
-				var oTable1 = 
-				$('#sample-table-2')
-				//.wrap("<div class='dataTables_borderWrap' />")   //if you are applying horizontal scrolling (sScrollX)
-				.dataTable( {
-					bAutoWidth: false,
-					"aoColumns": [
-					  { "bSortable": false },
-					  null, null,null, null, null,
-					  { "bSortable": false }
-					],
-					"aaSorting": [],
-			
-					//,
-					//"sScrollY": "200px",
-					//"bPaginate": false,
-			
-					//"sScrollX": "100%",
-					//"sScrollXInner": "120%",
-					//"bScrollCollapse": true,
-					//Note: if you are applying horizontal scrolling (sScrollX) on a ".table-bordered"
-					//you may want to wrap the table inside a "div.dataTables_borderWrap" element
-			
-					//"iDisplayLength": 50
-			    } );
-				/**
-				var tableTools = new $.fn.dataTable.TableTools( oTable1, {
-					"sSwfPath": "../../copy_csv_xls_pdf.swf",
-			        "buttons": [
-			            "copy",
-			            "csv",
-			            "xls",
-						"pdf",
-			            "print"
-			        ]
-			    } );
-			    $( tableTools.fnContainer() ).insertBefore('#sample-table-2');
-				*/
-			
-			
-				$(document).on('click', 'th input:checkbox' , function(){
-					var that = this;
-					$(this).closest('table').find('tr > td:first-child input:checkbox')
-					.each(function(){
-						this.checked = that.checked;
-						$(this).closest('tr').toggleClass('selected');
-					});
-				});
-			
-			
-				$('[data-rel="tooltip"]').tooltip({placement: tooltip_placement});
-				function tooltip_placement(context, source) {
-					var $source = $(source);
-					var $parent = $source.closest('table')
-					var off1 = $parent.offset();
-					var w1 = $parent.width();
-			
-					var off2 = $source.offset();
-					//var w2 = $source.width();
-			
-					if( parseInt(off2.left) < parseInt(off1.left) + parseInt(w1 / 2) ) return 'right';
-					return 'left';
-				}
-			
-			})
+            jQuery(function($){
+                var DataSourceTree = function(options) {
+                    this._data 	= options.data;
+                    this._delay = options.delay;
+                }
+
+                DataSourceTree.prototype.data = function(options, callback) {
+                    var self = this;
+                    var $data = null;
+
+                    if(!("name" in options) && !("type" in options)){
+                        $data = this._data;//the root tree
+                        callback({ data: $data });
+                        return;
+                    }
+                    else if("type" in options && options.type == "folder") {
+                        if("additionalParameters" in options && "children" in options.additionalParameters)
+                            $data = options.additionalParameters.children;
+                        else $data = {}//no data
+                    }
+
+                    if($data != null)//this setTimeout is only for mimicking some random delay
+                        setTimeout(function(){callback({ data: $data });} , parseInt(Math.random() * 500) + 200);
+                };
+
+                var ace_icon = ace.vars['icon'];
+                var tree_data_2 = {
+                    'wsj' : {name: 'wsj', type: 'folder', 'icon-class':'red'}	,
+                    'podcast' : {name: 'podcast', type: 'folder', 'icon-class':'orange'}
+                }
+                tree_data_2['wsj']['additionalParameters'] = {
+                    'children' : [
+                        {name: '<i class="'+ace_icon+' fa fa-music blue"></i> song1.ogg', type: 'item'},
+                        {name: '<i class="'+ace_icon+' fa fa-music blue"></i> song2.ogg', type: 'item'},
+                        {name: '<i class="'+ace_icon+' fa fa-music blue"></i> song3.ogg', type: 'item'},
+                        {name: '<i class="'+ace_icon+' fa fa-music blue"></i> song4.ogg', type: 'item'},
+                        {name: '<i class="'+ace_icon+' fa fa-music blue"></i> song5.ogg', type: 'item'}
+                    ]
+                }
+
+                $.ajax({
+                    url:"http://gnn-f02-01:14000/webhdfs/v1/data/audio/speech?user.name=hadoop&op=liststatus",
+                }).done(function(json) {
+                    var result = json['FileStatuses']['FileStatus'];
+                    alert(JSON.stringify(result));
+                }).fail( function(xhr, textStatus, errorThrown) {
+                    alert(JSON.stringify(xhr));
+                });
+
+                tree_data_2['podcast']['additionalParameters'] = {
+                    'children' : [
+                        {name: '<i class="'+ace_icon+' fa fa-film blue"></i> ESLPod164.mp3', type: 'item'},
+                        {name: '<i class="'+ace_icon+' fa fa-film blue"></i> ESLPod1106.mp3', type: 'item'}
+                    ]
+                }
+                var treeDataSource2 = new DataSourceTree({data: tree_data_2});
+
+                $('#tree2').ace_tree({
+                    dataSource: treeDataSource2 ,
+                    loadingHTML:'<div class="tree-loading"><i class="ace-icon fa fa-refresh fa-spin blue"></i></div>',
+                    'open-icon' : 'ace-icon fa fa-folder-open',
+                    'close-icon' : 'ace-icon fa fa-folder',
+                    'selectable' : false,
+                    'selected-icon' : null,
+                    'unselected-icon' : null
+                });
+            });
 		</script>
 
 		<!-- the following scripts are used in demo only for onpage help and you don't need them -->
